app/styles/components/code.css
    .shiki-wrapper {
        position: relative;
        font-size: 1rem;
        background: var(--color-neutral-900);
        border-radius: var(--radius-md);
    }

    .shiki-wrapper .button--copy {
        position: absolute;
        --button-margin: 0;
        --button-padding-x: 0;
        --button-padding-y: 0;
        top: 0.5lh;
        right: var(--spacing);
    }

    .shiki-wrapper:has(.code-title) {
        padding: var(--spacing);

        .code-header {
            padding-inline-start: var(--spacing);
            padding-block: var(--spacing);
            display: flex;
            gap: var(--spacing-md);
            justify-content: space-between;
            align-items: center;
        }

        .button--copy {
            position: relative;
            top: 0;
            right: 0;
        }

        .code-title {
            color: var(--color-neutral-300);
            font-style: italic;
            font-weight: 500;
            margin: 0;
        }
    }


    .shiki-wrapper pre {
        max-height: 30rem;
        padding: 1.15em 0.5em;
        padding-inline-end: 3em;
        margin-block: 0;
        border: var(--border-thick);
        border-radius: var(--radius-md);
        overflow: auto;

        white-space: pre;
        scrollbar-width: auto;
        scrollbar-color: var(--color-neutral-200) transparent;

        &::-webkit-scrollbar {
            height: 10px;
            width: 10px;
        }

        &::-webkit-scrollbar-thumb {
            background-color: var(--color-neutral-100);
            border-radius: var(--radius-sm);
        }

        code {
            line-height: 1.5;
        }

        .line {
            display: inline-flex;
            width: 100%;
        }

        .line:hover {
            background-color: var(--color-neutral-900);
        }
    }

    @media (max-width: 768px) {
        .shiki-wrapper pre {
            max-height: 22rem;
            padding-inline-end: 0;
            font-size: var(--font-size-sm);
        }
    }

    .shiki-inline {
        background-color: var(--color-inline-bg);
        border: var(--border-thin);
        padding: 0.125em 0.2em;
        border-radius: var(--radius-md);
        white-space: pre-wrap;
        word-break: break-word;
        overflow-wrap: break-word;
        box-decoration-break: clone;
        -webkit-box-decoration-break: clone;
    }

    
.shiki-inline.text-nowrap .line span {
    white-space: pre;
    overflow-wrap: anywhere;
}

